Lesson 8: fix footer separator line + add phone__link letter-spacing

--- a/lesson_8/css/footer.css
+++ b/lesson_8/css/footer.css
@@ -12,6 +12,10 @@
     align-items: center;
 }
 
+.footer__logo {
+    margin-bottom: 40px;
+}
+
 .footer__top {
     padding-bottom: 40px;
     border-bottom: 1px solid #d3cbd9;
@@ -21,10 +25,6 @@
     padding-top: 40px;
 }
 
-.footer__nav {
-    margin-top: 40px;
-}
-
 .nav__menu {
     margin: 0;
     padding: 0;
@@ -32,6 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 60px;
 }
 
@@ -40,6 +41,13 @@
     font-size: 16px;
     line-height: 130%;
     color: #535755;
+}
+
+.footer__separator {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid #d3cbd9;
 }
 
 .footer__copyright {
