--- a/lesson_8/css/header.css
+++ b/lesson_8/css/header.css
@@ -23,5 +23,6 @@
 .phone__link {
     font-weight: 500;
     font-size: 18px;
+    letter-spacing: 0.04em;
     color: #2c332f;
 }
